--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,11 @@ on:
 
   # Позволяет запустить этот рабочий процесс вручную на вкладке Actions
   workflow_dispatch:
+    inputs:
+      branch:
+        description: "Ветка, из которой деплоим"
+        required: false
+        default: "main"
 
 permissions:
   contents: write
@@ -20,6 +25,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.inputs.branch }}
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
