--- a/package.json
+++ b/package.json
@@ -67,10 +67,13 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "antd": "^6.0.0",
     "clsx": "^1.2.1",
+    "formik": "^2.4.9",
     "i18next": "^25.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^16.2.0"
+    "react-i18next": "^16.2.0",
+    "unchanged": "^2.2.1"
   }
 }
