--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "antd": "^6.0.0",
     "clsx": "^1.2.1",
     "formik": "^2.4.9",
@@ -74,7 +75,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^16.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
+    "redux-thunk": "^3.1.0",
     "unchanged": "^2.2.1"
   }
 }
