--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-i18next": "^16.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
+    "redux-saga": "^1.3.0",
     "redux-thunk": "^3.1.0",
     "unchanged": "^2.2.1"
   }
